--- a/cosmetic-market/public/client/assets/css/stylesheet.css
+++ b/cosmetic-market/public/client/assets/css/stylesheet.css
@@ -173,6 +173,11 @@ input[type="color"].form-control {
     box-shadow: none;
 }
 
+#btn-changepass {
+    background-color: none;
+    color: #ffc107;
+}
+
 /* Fix some bootstrap issues */
 span.hidden-xs,
 span.hidden-sm,
@@ -3854,6 +3859,8 @@ div.dioprogress_size_l {
         0 3px 1px -2px rgba(0, 0, 0, 0.2),
         0 1px 5px 0 rgba(0, 0, 0, 0.12);
     border-radius: 10px;
+    padding: 20px 10px;
+    margin-top: 50px;
 }
 
 .left-profile {
