--- a/cosmetic-market/public/client/assets/css/stylesheet.css
+++ b/cosmetic-market/public/client/assets/css/stylesheet.css
@@ -10,6 +10,15 @@ body {
     height: 1500px;
 }
 
+.show_menu {
+    display: block !important;
+}
+
+
+.sub-menu-content {
+    display: none;
+}
+
 /* 
 * {
     transition: all 1.5s ease;
