--- a/cosmetic-market/public/client/assets/css/login.css
+++ b/cosmetic-market/public/client/assets/css/login.css
@@ -1,6 +1,6 @@
 body {
-    background: url('https://as2.ftcdn.net/jpg/01/09/85/27/500_F_109852728_ZsoUw28lUsCHw7w6MwAKJwAgdNaxo4nE.jpg');
-    background-position: center;
+    background: url('https://i.pinimg.com/originals/7f/b7/8d/7fb78d3c845829e9a96315c59ec4bc26.jpg');
+    background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
 
@@ -85,4 +85,3 @@ body {
     display: flex;
     background-color: #fff
 }
-
